<resources>
  <string name="app_name">FunnyGuide</string>

  <!-- bottom navigation strings -->
  <string name="text_movie_nav">Filmes</string>
  <string name="text_tv_nav">Series</string>
  <string name="text_profile">Perfil</string>

  <!-- activity string -->
  <string name="title_activity_detail_item">DetailItemActivity</string>

  <!-- transition strings -->
  <string name="poster_transition">poster_item_transition</string>

  <!-- label strings -->
  <string name="lbl_title">Titulo:</string>
  <string name="lbl_original_title">Titulo original:</string>
  <string name="lbl_rating">Nota:</string>
  <string name="lbl_genre">Genero:</string>
  <string name="lbl_release_date">Data de lançamento:</string>
  <string name="lbl_language">Lingua:</string>
  <string name="lbl_overview">Resumo:</string>
  <string name="lbl_status">Status:</string>
  <string name="lbl_production_companies">Produtora:</string>
  <string name="lbl_countries">País:</string>
  <string name="lbl_name">Nome:</string>
  <string name="lbl_last_air_date">Data de término:</string>
  <string name="lbl_number_of_episodes">Numero de episodios:</string>
  <string name="lbl_season">Numero de temporadas:</string>
  <string name="lbl_original_name">Nome original:</string>

  <!-- hint search -->
  <string name="search_hint">Procurar...</string>

  <!-- Label empty state review -->
  <string name="lbl_empty_state_review">Este Filme não possui reviews.</string>
</resources>
